Eforce - Personal Dev/src/objects/Call__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Primary Attendee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call</relationshipLabel>
        <relationshipName>Call</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inservice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support In Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Off Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <formula>Account__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address_Line1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_1__c</fullName>
        <description>Additional Attendee</description>
        <label>Attendee 1</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_2__c</fullName>
        <description>Additional Attendee</description>
        <label>Attendee 2</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_3__c</fullName>
        <description>Additional Attendee</description>
        <label>Attendee 3</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit1__c</fullName>
        <label>Audit1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit2__c</fullName>
        <label>Audit2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Activity__c</fullName>
        <label>Primary Call Activity</label>
        <picklist>
            <controllingField>Activity_Type__c</controllingField>
            <picklistValues>
                <fullName>Anastomosis Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attending Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Surgical Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosurgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BioSurgery Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadaveric Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Paper Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermabond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPI Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange / Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face Detailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hernia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hernia Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loop Suturing Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings in Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Product Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus Sutures &amp; SSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Demo: Dry Demo with STRATAFIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Demo: Loop Suturing with PDS Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Date__c</fullName>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_End_Date__c</fullName>
        <description>Only used in time of territory</description>
        <label>Call End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_End_Time__c</fullName>
        <label>Call End Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Start_Time__c</fullName>
        <label>Call Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Product_Feedback__c</fullName>
        <label>Competitor Product Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Products__c</fullName>
        <label>Competitor Products</label>
        <picklist>
            <picklistValues>
                <fullName>B Braun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Covidien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vigilenz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Used for fetch country of the call in reports &amp; dashboards</description>
        <formula>Assigned_To__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorectal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digestive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB/GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trauma &amp; Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vascular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Difference__c</fullName>
        <formula>NOW()-Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>TEXT(Account__r.District__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Create_Next_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Create Next Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF( ISPICKVAL(Activity_Type__c,&apos;Time Off Territory&apos;) , IF( AND((End_Time__c-Start_Time__c )*24 &gt;0 ,(End_Time__c - Start_Time__c )*24 &lt;= 4) , 0.5, 1) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Call End Time</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Half_Full_Day__c</fullName>
        <formula>IF( Duration__c=0.5 ,&apos;Half Day&apos;,&apos;Full Day&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Half / Full Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <label>Hospital Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>Hospital</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call</relationshipLabel>
        <relationshipName>Call1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsPlanned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPlanned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Field_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint Field Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Call_Activity__c</fullName>
        <label>Next Call Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inservice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support In Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Call_Objective_Date__c</fullName>
        <label>Next Call Objective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Call_Objective__c</fullName>
        <label>Next Call Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Set__c</fullName>
        <label>No of Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_products__c</fullName>
        <description>Count the number of products added in the related list (Call Detail)</description>
        <label>No of products</label>
        <summaryForeignKey>Call_Detail__c.Call__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Unplanned__c</fullName>
        <formula>IF( IsPlanned__c =true, &apos;Planned&apos;, &apos;Unplanned&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned/Unplanned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <formula>Account__r.PostCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PostCode</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procedure_Name__c</fullName>
        <label>Procedure Name</label>
        <picklist>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caesarean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cholecystectomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craniotomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endometriosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fascia closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatectomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hysterctomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inguinal Hernia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laminectomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastectomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Hernia Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thyroidectomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trauma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve Replacement/Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ventral Hernia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Episiotomy repair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure_Type__c</fullName>
        <label>Procedure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laproscopic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robotic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_Chosen__c</fullName>
        <label>Products Chosen</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Cognizant: To store the remarks for workshop</description>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Call_Activity__c</fullName>
        <label>Secondary Call Activity</label>
        <picklist>
            <controllingField>Activity_Type__c</controllingField>
            <picklistValues>
                <fullName>Anastomosis Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attending Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Surgical Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosurgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BioSurgery Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadaveric Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Paper Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermabond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPI Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange / Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face Detailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hernia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hernia Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loop Suturing Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings in Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Product Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus Sutures &amp; SSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Demo: Dry Demo with STRATAFIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Demo: Loop Suturing with PDS Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Call Start Time</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT( Account__r.State__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>This_Call_Objective__c</fullName>
        <label>This Call Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Off_Territory_Days__c</fullName>
        <formula>( Call_End_Date__c - Call_Date__c )+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Off Territory Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Procedure__c</fullName>
        <label>Type of Procedure</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unplanned_Products_Chosen__c</fullName>
        <label>Unplanned Products Chosen</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workshop_Type__c</fullName>
        <label>Workshop Type</label>
        <picklist>
            <picklistValues>
                <fullName>Surgical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Call</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CALL-{0000}</displayFormat>
        <label>Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call</pluralLabel>
    <recordTypes>
        <fullName>Face_to_Face</fullName>
        <active>true</active>
        <description>Represents Face to Face call</description>
        <label>Face to Face</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inservice</fullName>
        <active>true</active>
        <description>Represents Inservice call</description>
        <label>Inservice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_In_Surgery</fullName>
        <active>true</active>
        <description>Represents SIS call</description>
        <label>Support In Surgery</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time_Off_Territory</fullName>
        <active>true</active>
        <description>Non Field Activities</description>
        <label>Time Off Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <description>Represents workshops like Surgical, EPI etc.</description>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Call_Date_Mandatory</fullName>
        <active>true</active>
        <description>Call Date is Mandatory</description>
        <errorConditionFormula>ISNULL(Call_Date__c )</errorConditionFormula>
        <errorDisplayField>Call_Date__c</errorDisplayField>
        <errorMessage>Please enter the Call Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Call_Date_Validation</fullName>
        <active>true</active>
        <description>Validate call date, start time, end time &amp; dont allow past dates</description>
        <errorConditionFormula>OR(if( Call_Date__c &lt; TODAY()-5,true,false),if( DATEVALUE(Start_Time__c) &lt; TODAY()-5,true,false),if( DATEVALUE(End_Time__c)&lt; TODAY()-5,true,false))</errorConditionFormula>
        <errorMessage>Call Date should be within past 5 days or future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Call_Date_should_be_greater_than_past_2</fullName>
        <active>true</active>
        <description>Calls cannot be planned for past date beyond 2 days</description>
        <errorConditionFormula>Call_Date__c &lt;= ( TODAY() -3)</errorConditionFormula>
        <errorMessage>You cannot create/update calls beyond past two days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Call_Duration_Must_Be_Positive</fullName>
        <active>true</active>
        <description>to ensure end time is always greater then start time</description>
        <errorConditionFormula>End_Time__c - Start_Time__c &lt;= 0</errorConditionFormula>
        <errorMessage>End Time must be greater than Start Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Call_End_Time_Mandatory</fullName>
        <active>true</active>
        <description>Call End Time is mandatory</description>
        <errorConditionFormula>And(NOT( ISPICKVAL( Activity_Type__c , &quot;Time Off Territory&quot;) ) ,ISNULL( End_Time__c ))</errorConditionFormula>
        <errorDisplayField>End_Time__c</errorDisplayField>
        <errorMessage>Please enter the Call End Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Call_Start_Time_Mandatory</fullName>
        <active>true</active>
        <description>Call Start tme should be mandatory</description>
        <errorConditionFormula>And(NOT( ISPICKVAL( Activity_Type__c , &quot;Time Off Territory&quot;) ) ,ISNULL( Start_Time__c ))</errorConditionFormula>
        <errorDisplayField>Start_Time__c</errorDisplayField>
        <errorMessage>Please enter the Call Start Time</errorMessage>
    </validationRules>
</CustomObject>